Internal change
PiperOrigin-RevId: 624162540